Update Task4 - Image to pencil sketch with python .ipynb

--- a/Task4 - Image to pencil sketch with python .ipynb
+++ b/Task4 - Image to pencil sketch with python .ipynb
@@ -5,7 +5,7 @@
    "id": "b23c35d0",
    "metadata": {},
    "source": [
-    "# LGMVIP October Data Science Internship "
+    "# LGMVIP October Data Science Internship 2022 "
    ]
   },
   {
